Fix theme flicker by applying CSS variables dynamically in index.html and NavBar component

--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,3 @@
-body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 1.5rem;
-  font-weight: 200;
-
-  --primary-page-bg: #fffef8;
-  --alt-page-bg: #fffef8;
-  --text-color: black;
-  --alt-text-color: #4682a9;
-  --border-color: black;
-  --navbar-color: black;
-  --navbar-active: white;
-  --navbar-inactive: #a7a7a7;
-  --color-effect: linear-gradient(
-    45deg,
-    rgba(0, 204, 255, 0.5),
-    rgba(255, 0, 204, 0.5)
-  );
-
-  background-color: var(--primary-page-bg);
-  -webkit-transition: all 0.1s linear;
-  -moz-transition: all 0.1s linear;
-  -o-transition: all 0.1s linear;
-  transition: all 0.1s linear;
-  overflow: scroll;
-  overflow-x: hidden;
-}
-::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
-}
-
-body.darkmode {
-  --primary-page-bg: #191919;
-  --alt-page-bg: rgba(25, 25, 25, 0.5);
-  --text-color: white;
-  --border-color: #fffef8;
-
-  color: var(--text-color);
-  background-color: var(--primary-page-bg);
-  -webkit-transition: all 0.1s linear;
-  -moz-transition: all 0.1s linear;
-  -o-transition: all 0.1s linear;
-  transition: all 0.1s linear;
-}
-
 main {
   padding: 1rem;
   height: 100%;
@@ -57,13 +9,13 @@ h2 {
   font-size: 2rem;
   font-weight: 300;
 }
+
 .name {
   color: var(--alt-text-color);
   font-weight: 300;
 }
 
 /* Button Effect */
-
 .button-effect {
   color: inherit;
   text-decoration: none;
@@ -87,26 +39,6 @@ h2 {
   z-index: -1;
   transform: scaleX(0);
   transition: transform 0.3s ease;
-}
-
-.button-effect:nth-child(1):hover::before {
-  transform: scaleX(1);
-  transform-origin: 100%;
-}
-
-.button-effect:nth-child(2):hover::before {
-  transform: scaleX(1);
-  transform-origin: 0%;
-}
-
-.button-effect:nth-child(1):not(:hover)::before {
-  transform: scaleX(0);
-  transform-origin: 100%;
-}
-
-.button-effect:nth-child(2):not(:hover)::before {
-  transform: scaleX(0);
-  transform-origin: 0%;
 }
 
 .button-effect:hover {
